--- a/upload.html
+++ b/upload.html
@@ -129,7 +129,7 @@ h6
 <li><a href="blood/om.html"style="font-size:20px">O-</a></li>
 <li><a href="adminhome.php"style="font-size:20px">Back to Home</a></li>
 </ul>
-<h3 style="color:black;font-size: 20px;text-align:center">&copy 2019 BBMS</h3>
+<h3 style="color:black;font-size: 20px;text-align:center"> Blood Bank</h3>
 
 </body>
 </html>
